--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,7 @@
             <div class="facts-grid">
                 <div class="fact-card">
                     <h3>Date</h3>
-                    <p>September 12, 2023 <button class="copy-btn" data-text="September 12, 2023">📋</button></p>
+                    <p>To be announced... <button class="copy-btn" data-text="To be announced...">📋</button></p>
                 </div>
                 <div class="fact-card">
                     <h3>Time</h3>
@@ -1785,13 +1785,6 @@
     <footer>
         <div class="container">
             <p>IT Club • BIT Noida</p>
-            
-            <div class="social-icons">
-                <a href="#" class="social-icon">F</a>
-                <a href="#" class="social-icon">T</a>
-                <a href="#" class="social-icon">I</a>
-                <a href="#" class="social-icon">L</a>
-            </div>
             
             <p class="copyright">© <span id="current-year"></span> IT Club BIT Noida. All rights reserved.</p>
             <a href="https://github.com/Shashwat-k-9114" target="_blank"><p class="made-with">Made with &lt; / &gt; and caffeine by Shashwat Kashyap</p></a>
